# Courses-Appexoft

./: CONTRIBUTING.md  README.md  vscode-setup.md  vstanovlennya-git.md  zavantazhennya-program.md
.github/: CODEOWNERS  pull_request_template.md
algorytmy-ta-struktury-danykh/: README.md  domashnie-zavdannia-algorytmy.ipynb  lektsiya-1-skladnist-ta-rekursiya.ipynb  lektsiya-2-bazovi-struktury-danykh.ipynb  lektsiya-3-dereva-kupy-union-find.ipynb  lektsiya-4-sortuvannya-ta-poshuk.ipynb  lektsiya-5-grafy.ipynb  lektsiya-6-paradygmy-algorytmiv.ipynb
git-ta-inshe/: README.md  domashnie-zavdannia-lektsiya-1.ipynb  domashnie-zavdannia-lektsiya-2.ipynb  lektsiya-1-git.ipynb  lektsiya-2-yakist-koda.ipynb
modul-1-vstup-do-python/: README.md  bonus-asyncio-threading-multiprocessing.ipynb  domashnie-zavdannia-lektsiya-1.ipynb  domashnie-zavdannia-lektsiya-2.ipynb  domashnie-zavdannia-lektsiya-3.ipynb  domashnie-zavdannia-lektsiya-4.ipynb  lektsiya-1-syntaksys-zminni-typy-danych-operatory.ipynb  lektsiya-2-ryadky-ta-kolektsiyi.ipynb  lektsiya-2-umovni-operatory-ta-tsykly.ipynb  (+2 more)
modul-2-oop/: README.md  (+4 more)
modul-2-oop/skelet-proyektu/: .env.example  .gitignore  README.md  pyproject.toml
modul-2-oop/skelet-proyektu/src/taskapp/: __init__.py  config.py  exceptions.py  main.py
modul-2-oop/skelet-proyektu/src/taskapp/domain/: __init__.py  models.py
modul-2-oop/skelet-proyektu/src/taskapp/repositories/: __init__.py  base.py  in_memory.py
modul-2-oop/skelet-proyektu/src/taskapp/services/: __init__.py  task_service.py
modul-2-oop/skelet-proyektu/tests/: test_task_service.py
(+34 files in other folders)
